--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "@vercel/blob": "^0.24.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@types/three": "^0.168.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
