--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
     "@vercel/blob": "^0.24.0",
+    "axios": "^1.7.7",
     "next": "14.2.13",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.79.3",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
